adding multi-class post

--- a/content/posts/2023-12-18-about-dpm.md
+++ b/content/posts/2023-12-18-about-dpm.md
@@ -1,7 +1,7 @@
 ---
 title: "About Deep Unsupervised Learning Using Nonequilibrium Thermodynamics"
 date: 2023-12-18T18:06:41+01:00
-draft: false
+draft: true
 
 # cover:
 #     image: "<image path/url>"
